@@ -119,6 +119,9 @@ mountpeco: 20
 who: 20
 whois: 20
 
+// Returns list of top 50 logged in characters and their zeny based on zeny sorted from highest amount to lowest.
+whozeny: 20
+
 // Returns list of logged in characters with their job.
 who2: 20
 
@@ -290,6 +293,9 @@ useskill: 40
 
 // make another player killable
 charkillable: 40
+
+// makes everyone on server do a random emote
+happyhappyjoyjoy:40
 
 //---------------------
 // 50: Sub-GM+ commands
